--- a/Model building.ipynb
+++ b/Model building.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a925b403",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install xg"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "f782de55",
    "metadata": {},
